kubernetes/apps/security/authentik/app/httproute.yaml
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
spec:
  hostnames:
    - auth.${SECRET_DOMAIN}
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
