kubernetes/apps/security/authentik/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
spec:
  ingressClass: internal
  rules:
    - host: jacob-williams.me
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-authentik-embedded-outpost
                port:
                  number: 9000
